core/codegen/tests/ui-fail-nightly/catch_type_errors.stderr
error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
 --> tests/ui-fail-nightly/catch_type_errors.rs:6:30
  |
5 | #[catch(404)]
  | ------------- required by a bound introduced by this call
6 | fn f1(_request: &Request) -> usize {
  |                              ^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Responder<'r, 'o>`:
            <&'o [u8] as Responder<'r, 'o>>
            <&'o str as Responder<'r, 'o>>
            <() as Responder<'r, 'static>>
            <(ContentType, R) as Responder<'r, 'o>>
            <(Status, R) as Responder<'r, 'o>>
            <Accepted<R> as Responder<'r, 'o>>
            <Arc<[u8]> as Responder<'r, 'static>>
            <Arc<str> as Responder<'r, 'static>>
          and $N others

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
 --> tests/ui-fail-nightly/catch_type_errors.rs:5:1
  |
5 | #[catch(404)]
  | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Responder<'r, 'o>`:
            <&'o [u8] as Responder<'r, 'o>>
            <&'o str as Responder<'r, 'o>>
            <() as Responder<'r, 'static>>
            <(ContentType, R) as Responder<'r, 'o>>
            <(Status, R) as Responder<'r, 'o>>
            <Accepted<R> as Responder<'r, 'o>>
            <Arc<[u8]> as Responder<'r, 'static>>
            <Arc<str> as Responder<'r, 'static>>
          and $N others
  = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:11:30
   |
10 | #[catch(404)]
   | ------------- required by a bound introduced by this call
11 | fn f2(_request: &Request) -> bool {
   |                              ^^^^ the trait `Responder<'_, '_>` is not implemented for `bool`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and $N others

error[E0277]: the trait bound `bool: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:10:1
   |
10 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `bool`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and $N others
   = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: FromError<'_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:16:17
   |
16 | fn f3(_request: bool) -> usize {
   |                 ^^^^ the trait `FromRequest<'_>` is not implemented for `bool`, which is required by `bool: FromError<'_>`
   |
   = help: the following other types implement trait `FromError<'r>`:
             &'r (dyn TypedError<'r> + 'r)
             &'r rocket::Request<'r>
             Status
             std::option::Option<&'r (dyn TypedError<'r> + 'r)>
   = note: required for `bool` to implement `FromError<'_>`

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:16:26
   |
15 | #[catch(404)]
   | ------------- required by a bound introduced by this call
16 | fn f3(_request: bool) -> usize {
   |                          ^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and $N others

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:15:1
   |
15 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and $N others
   = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:21:12
   |
20 | #[catch(404)]
   | ------------- required by a bound introduced by this call
21 | fn f4() -> usize {
   |            ^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and $N others

error[E0277]: the trait bound `usize: Responder<'_, '_>` is not satisfied
  --> tests/ui-fail-nightly/catch_type_errors.rs:20:1
   |
20 | #[catch(404)]
   | ^^^^^^^^^^^^^ the trait `Responder<'_, '_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r, 'o>`:
             <&'o [u8] as Responder<'r, 'o>>
             <&'o str as Responder<'r, 'o>>
             <() as Responder<'r, 'static>>
             <(ContentType, R) as Responder<'r, 'o>>
             <(Status, R) as Responder<'r, 'o>>
             <Accepted<R> as Responder<'r, 'o>>
             <Arc<[u8]> as Responder<'r, 'static>>
             <Arc<str> as Responder<'r, 'static>>
           and $N others
   = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)
